# keyai-desktop

./: .cursorrules  .gitignore  ALTERNATIVE_APIS.md  API.md  API_FIRST_REFACTOR.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEBUG_REPORT.md  DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MICROSERVICES_IMPLEMENTATION_STATUS.md  MICROSERVICES_TASKS.md  Makefile  PRD.md  PULL_REQUEST_TEMPLATE.md  README.md  RUNNING.md  SECURITY.md  common_fixes_log.txt  debug_keyai.sh  dev-microservices.sh  docker-compose.yml  package-lock.json  package.json  requirements.txt  tauri.conf.json
.cursor/rules/: agent-workflow.mdc  clean-code.mdc  create-rules.mdc  dev-guidelines.mdc  dry-principle.mdc  fastapi.mdc  general-coding.mdc  gitflow.mdc  nativescript.mdc  nextsjs.mdc  nodeexpress.mdc  python.mdc  react.mdc  typescript.mdc
.github/: CODEOWNERS  badges.md  dependabot.yml  mergify.yml
.github/workflows/: auto-fix.yml  auto-review.yml  ci.yml  release.yml  security.yml
benches/: agent_benchmark.rs  search_benchmark.rs
docker/: docker-compose.microservices.yml  docker-compose.yml  init-db.sql  kong.yml  prometheus.yml
docs/: AGENT.md  API.md  CI_CD_DOCUMENTATION.md  DEPENDENCIAS.md  LIQUID_GLASS_IMPLEMENTATION.md  MICROSERVICES_ARCHITECTURE.md  README.md  design-brief-mockup.md
docs/openapi/: keyai-api-v1.yaml
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Header.tsx  LiquidGlassDemo.tsx  SearchHistory.tsx  SearchInterface.tsx  SearchResults.tsx  StatusPanel.tsx
frontend/src/components/ui/: GlassButton.tsx  GlassCard.tsx  GlassInput.tsx  index.ts
frontend/src/hooks/: useGlassTheme.ts  useKeyboard.ts  useSearch.ts  useSettings.ts
frontend/src/styles/: liquid-glass.css
frontend/src/test/: setup.ts
scripts/: ci-local.ps1  ci-local.sh
services/agent-service/: Dockerfile
services/auth-service/: Cargo.toml  Dockerfile
services/auth-service/src/: main.rs
services/capture-service/: Cargo.toml  Dockerfile
services/capture-service/src/: config.rs  error.rs  health.rs  main.rs  metrics.rs  publisher.rs
services/masker-service/: Cargo.toml  Dockerfile
services/masker-service/src/: config.rs  error.rs  main.rs  masker.rs  metrics.rs
services/search-service/: Cargo.toml  Dockerfile
services/search-service/src/: main.rs
services/storage-service/: Cargo.toml  Dockerfile
services/storage-service/src/: config.rs  error.rs  main.rs
src/: lib.rs  main.rs
src/agent/: mod.rs
src/commands/: mod.rs
src/db/: mod.rs
src/masker/: mod.rs
src/search/: mod.rs
tests/: agent_integration_test.rs  integration_test.rs  simple_test.rs  test_masker.rs
