[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "json", "query", "tracing"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression", "timeout"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.35", features = ["full"] }

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

# Configuration
config = "0.13"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.13"

# Metrics
prometheus = "0.13"
axum-prometheus = "0.6"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# OpenAPI Documentation
utoipa = { version = "4.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "5.0", features = ["axum"] }
utoipa-redoc = { version = "2.0", features = ["axum"] }
utoipa-rapidoc = { version = "2.0", features = ["axum"] }

# Testing
reqwest = { version = "0.11", features = ["json"], optional = true }
wiremock = { version = "0.5", optional = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
wiremock = "0.5"
fake = { version = "2.9", features = ["derive"] }
once_cell = "1.19"

[features]
default = []
integration-tests = ["reqwest", "wiremock"] 