[package]
name = "masker-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex para padrões PII
regex = "1.10"
lazy_static = "1.4"

# Logging
tracing = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validação
validator = { version = "0.16", features = ["derive"] }

# Mensageria
lapin = "2.3" # RabbitMQ client
redis = { version = "0.23", features = ["tokio-comp"] }

# Configuração
config = "0.13"

# Erro handling
anyhow = "1.0"
thiserror = "1.0"

# OpenAPI
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Métricas
prometheus = "0.13"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] } 