[package]
name = "masker-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "json", "query", "tracing"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.35", features = ["full"] }

# Message Queue
async-nats = "0.33"

# PII Detection and Masking
regex = "1.10"
once_cell = "1.19"
lazy_static = "1.4"

# ML/NLP (for advanced PII detection)
# candle-core = "0.3"
# candle-transformers = "0.3"
# tokenizers = "0.15"

# Metrics & Tracing
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Configuration
config = "0.13"
dotenv = "0.15"
envy = "0.4"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# API Documentation (comentado temporariamente)
# utoipa = { version = "4.1", features = ["axum_extras"] }
# utoipa-swagger-ui = { version = "5.0", features = ["axum"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
mockall = "0.12"
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "masking_bench"
harness = false 