[package]
name = "masker-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "json", "query", "tracing"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.35", features = ["full"] }

# Message Queue (RabbitMQ)
lapin = "2.3"
async-nats = "0.33"

# PII Detection and Masking
regex = "1.10"
aho-corasick = "1.1"

# Metrics & Tracing
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.12"

# Configuration
config = "0.13"
dotenv = "0.15"
envy = "0.4"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp"] }

# API Documentation
# utoipa = { version = "4.1", features = ["axum_extras"] }
# utoipa-swagger-ui = { version = "5.0", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12" 