[package]
name = "search-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "json", "query", "tracing"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression", "timeout"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.35", features = ["full"] }

# Database & Cache
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Search & ML
# Using postgres for FTS for now, can be replaced by Elasticsearch/OpenSearch
# candle-core = "0.3"
# candle-transformers = "0.3"
# tokenizers = "0.15"
fuzzy-matcher = "0.3"

# Metrics & Tracing
axum-prometheus = "0.4"
prometheus = "0.13"
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14"
opentelemetry-semantic-conventions = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.13"
dotenv = "0.15"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# API Documentation
utoipa = { version = "4.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["axum"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
mockall = "0.12"
criterion = "0.5"

[[bench]]
name = "search_bench"
harness = false 